Use Java 21 language features